fixed form width on small resolution bug

--- a/Singer.API/ClientApp/src/app/modules/admin/components/legalguardians/legalguardian-details/legalguardian-details.component.css
+++ b/Singer.API/ClientApp/src/app/modules/admin/components/legalguardians/legalguardian-details/legalguardian-details.component.css
@@ -10,6 +10,7 @@
 .inline-fields {
    display: flex;
    flex-direction: row;
+   flex-wrap: wrap;
 }
 
 /* Form field spacing */
